kubernetes/35/borrar01.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2022-09-06T03:52:51Z"
  generateName: balanced-5744b548b4-
  labels:
    app: balanced
    pod-template-hash: 5744b548b4
  name: balanced-5744b548b4-jtvwv
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: balanced-5744b548b4
    uid: 8b013d7f-8b26-465d-8dc6-7125a8c4414e
  resourceVersion: "5106"
  uid: 3063ce5d-3b96-4f2a-8b10-deb23cd8e32c
spec:
  containers:
  - image: k8s.gcr.io/echoserver:1.4
    imagePullPolicy: IfNotPresent
    name: echoserver
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-wj9x9
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-wj9x9
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-09-06T03:52:51Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-09-06T03:52:51Z"
    message: 'containers with unready status: [echoserver]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-09-06T03:52:51Z"
    message: 'containers with unready status: [echoserver]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-09-06T03:52:51Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://76810c776be46a2612db4ee5f2ccf06f3c81b4e34a65ee401865ac2763575d10
    image: k8s.gcr.io/echoserver:1.4
    imageID: docker-pullable://k8s.gcr.io/echoserver@sha256:5d99aa1120524c801bc8c1a7077e8f5ec122ba16b6dda1a5d3826057f67b9bcb
    lastState:
      terminated:
        containerID: docker://76810c776be46a2612db4ee5f2ccf06f3c81b4e34a65ee401865ac2763575d10
        exitCode: 1
        finishedAt: "2022-09-06T03:55:52Z"
        reason: Error
        startedAt: "2022-09-06T03:55:52Z"
    name: echoserver
    ready: false
    restartCount: 5
    started: false
    state:
      waiting:
        message: back-off 2m40s restarting failed container=echoserver pod=balanced-5744b548b4-jtvwv_default(3063ce5d-3b96-4f2a-8b10-deb23cd8e32c)
        reason: CrashLoopBackOff
  hostIP: 192.168.49.2
  phase: Running
  podIP: 172.17.0.6
  podIPs:
  - ip: 172.17.0.6
  qosClass: BestEffort
  startTime: "2022-09-06T03:52:51Z"
